syntax = "proto3";

package io.harness.pms.contracts.commons;

option java_multiple_files = true;

enum RepairActionCode {
  UNKNOWN = 0;
  RETRY = 1;
  MANUAL_INTERVENTION = 2;
  IGNORE = 3;
  END_EXECUTION = 4;
  MARK_AS_SUCCESS = 5;
  ON_FAIL = 6;
}